--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "You",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.32.0",
     "cookie-parser": "^1.4.6",
